CPM-1246 - Fix Alignment Issue

--- a/src/styles/_includes/components/_aside.scss
+++ b/src/styles/_includes/components/_aside.scss
@@ -45,10 +45,10 @@
 
   &__avatar {
     text-align: right;
-    padding-bottom: 44px;
+    padding-bottom: 45px;
 
     img {
-      height: 86px;
+      height: 82px;
       width: auto;
     }
   }
